fix z-index

--- a/packages/react/components/StoryModal/StoryModal.scss
+++ b/packages/react/components/StoryModal/StoryModal.scss
@@ -340,6 +340,7 @@
     left: 0;
     width: 100%;
     display: flex;
+    z-index: 99999;
     flex-direction: column;
   }
 }
